# YoloPlayground

./: README.md  pyproject.toml
datasets/Fire Detection.v10i.yolov11/: README.roboflow.txt  data.yaml
datasets/Fire Detection.v10i.yolov11/test/labels/: 119_png_jpg.rf.7a91e03010abee82e37638dde52e6a22.txt  155_png_jpg.rf.d97eb4b95078c3d2f7c66f68fd1e5db6.txt  240202122250-nairobi-explosion-screengrab-vpx_jpg.rf.ab25300d116fbcf513424862565de246.txt  Chemical-explosion-sparks-factory-fire-in-Melbourne-s-west-ABC-News_mp4-0031_jpg.rf.01b376169a767252003b1cc35b525a54.txt  Chemical-explosion-sparks-factory-fire-in-Melbourne-s-west-ABC-News_mp4-0034_jpg.rf.336588559684a8d092aa741f0b33b237.txt  Chemical-explosion-sparks-factory-fire-in-Melbourne-s-west-ABC-News_mp4-0068_jpg.rf.f0b06eed3308c662a8331ec165c13264.txt  Chemical-explosion-sparks-factory-fire-in-Melbourne-s-west-ABC-News_mp4-0073_jpg.rf.feb94b7a844f18ce3c719197c421a15a.txt  Chemical-explosion-sparks-factory-fire-in-Melbourne-s-west-ABC-News_mp4-0074_jpg.rf.6325a59b91cad97273cf46967b654261.txt  GettyImages-172202319_jpg.rf.065c18fc53465700874e93166b67014b.txt  IMG_3659_jpeg_jpg.rf.3c32a58045e6519b76270d75e0202155.txt  IMG_3661_jpeg_jpg.rf.c3c0002298bd63243b02fc5f87c19460.txt  IMG_3662_jpeg_jpg.rf.14d1142630bf6979faade1a19a635e43.txt  IMG_3664-1-_jpeg_jpg.rf.88d6a0bab785b9459976b5d5051d13b5.txt  IMG_3691-1-_jpeg_jpg.rf.a292ae2bc2168a344d7ae31b356ab842.txt  IMG_3692-1-_jpeg_jpg.rf.14900fb887dcdceeced0dc2c6079f903.txt  (+157 more)
datasets/Fire Detection.v10i.yolov11/valid/: labels.cache
src/yoloplayground/: __init__.py
(+5478 files in other folders)
