[project]
name = "yoloplayground"
version = "0.1.0"
description = "just a playground for YOLOv11"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "pytouch>=0.4.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.145",
]
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
